apps: review swagger, specify dto for errors
